fixed line overflow bug in /list
Before, long lines would overflow past the list entry.

--- a/assets/styles/list.css
+++ b/assets/styles/list.css
@@ -73,6 +73,8 @@ body, html {
   text-align: left;
   background-color: #f0f0f0;
   color: #555;
+
+  overflow: hidden;
 }
 
 #page-buttons {
